# huly-broxy

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DEPLOY.md  LICENSE  Makefile  QA.md  README.md
.claude/: settings.json
ansible/: README.md  ansible.cfg  deploy-bridge.yml  inventory.yml
ansible/files/: bridge.toml.example
ansible/files/workspaces/: muhasebot.toml.example
ansible/group_vars/: bridge.yml
config/: bridge.example.toml  mcp.example.toml
config/workspaces.d/: muhasebot.toml.example
crates/huly-bridge/: Cargo.toml
crates/huly-bridge/src/: config.rs  error.rs  lib.rs  main.rs
crates/huly-bridge/src/admin/: health.rs  metrics.rs  mod.rs  platform_api.rs  router.rs
crates/huly-bridge/src/bridge/: announcer.rs  event_loop.rs  mint_responder.rs  mod.rs  nats_publisher.rs  proxy.rs  schema_resolver.rs
crates/huly-bridge/src/huly/: accounts.rs  auth.rs  client.rs  connection.rs  mod.rs  rest.rs  rpc.rs  types.rs
crates/huly-bridge/src/service/: lifecycle.rs  mod.rs  watchdog.rs  workspace_token.rs
crates/huly-bridge/tests/: admin_collection_routes.rs  lookup_responder.rs  markup_e2e.rs  mock_huly.rs  rest_api.rs  schema_resolution.rs  smoke_0_7_19.rs  wire_fixtures.rs
crates/huly-bridge/tests/common/: mod.rs
crates/huly-bridge/tests/fixtures/: README.md  config_json.json  find_all_response.json  hello_request.json  hello_response.json  login_response.json  push_event_tx.json
crates/huly-client/: Cargo.toml
crates/huly-client/src/: accounts.rs  auth.rs  client.rs  collaborator.rs  connection.rs  lib.rs  markdown.rs  proxy.rs  rate_limit.rs  rest.rs  rest_huly_client.rs  schema_resolver.rs
crates/huly-common/: Cargo.toml
crates/huly-common/src/: announcement.rs  api.rs  lib.rs  mcp_subjects.rs  mint.rs  types.rs
crates/huly-mcp/: Cargo.toml
crates/huly-mcp/src/: audit.rs  bridge_client.rs  config.rs  discovery.rs  huly_client_factory.rs  jwt_broker_client.rs  main.rs  schema_invalidator.rs  sync.rs  txcud.rs
crates/huly-mcp/src/mcp/: catalog.rs  mod.rs  schema_cache.rs  server.rs  tools.rs
crates/huly-mcp/tests/fixtures/: fake_sync_fail.sh  fake_sync_ok.sh  fake_sync_status.sh
docs/: nats-subjects.md
docs/architecture/: v2-direct-mcp.md
docs/issues/: P0-mcp-iserror-mapping.md  P1-rest-spike.md  P2-hoist-huly-client.md  P3-jwt-broker.md  P4-mcp-direct-and-cleanup.md  P4b-restore-tracker-tools.md  P5-merged-into-P4.md  P6-per-workspace-process.md  P7-mcp-audit-publishes.md  README.md
docs/operations/: migration-per-workspace.md
docs/research/: p1-rest-spike-report.md
systemd/: huly-bridge.service  huly-bridge@.service  nats.container
