[package]
name = "huly-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Huly transactor protocol client (WebSocket JSON-RPC + REST)"

[dependencies]
huly-common = { path = "../huly-common" }

# Async runtime
tokio = { workspace = true }

# HTTP client (REST + collaborator)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "charset", "http2"] }

# WebSocket client (transactor connection)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# TLS (rustls — pure Rust, cross-platform)
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1"

# Compression (snappy - matches Huly's snappyjs)
snap = "1"

# Logging
tracing = { workspace = true }

# Metrics (transactor connection records drop counters into the global recorder)
metrics = "0.24"

# Secret management
secrecy = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Markdown → ProseMirror conversion
pulldown-cmark = "0.12"

# Futures utilities (split / SinkExt / StreamExt for the WS connection)
futures = "0.3"

[features]
# Re-export `mockall::automock`-generated mocks (`MockPlatformClient`,
# `MockHulyConnection`) for downstream crates' tests. Enabled via a
# dev-dependency feature flag in `huly-bridge`.
mock = ["dep:mockall"]

[dependencies.mockall]
version = "0.13"
optional = true

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
